[BE] 보따리 템플릿 description 추가 (#571)
* feat: BottariTemplate description 칼럼 추가

* feat: 보따리 템플릿 생성 시, 설명 칼럼 추가

* feat: 보따리 템플릿 조회 시, 설명 칼럼 추가

* test: 보따리 템플릿 설명 검증 테스트 추가

* docs: init.sql 템플릿 description 추가

* refactor: 해시태그 조회 시, description 조회 적용